# ChangeLog for net-print/gtklp
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/gtklp/ChangeLog,v 1.31 2008/01/17 16:28:50 flameeyes Exp $

  17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> gtklp-1.2.5.ebuild:
  Add missing pkg-config dependency. Thanks Patrick in bug #204804.

*gtklp-1.2.5 (10 Oct 2007)

  10 Oct 2007; Stefan Schweizer <genstef@gentoo.org> -gtklp-1.2.3.ebuild,
  +gtklp-1.2.5.ebuild:
  Version bump thanks to betelgeuse in bug 191480

*gtklp-1.2.3 (01 May 2007)

  01 May 2007; Stefan Schweizer <genstef@gentoo.org> +gtklp-1.2.3.ebuild:
  version bump

  27 Nov 2006; Stefan Schweizer <genstef@gentoo.org> -gtklp-0.9p.ebuild:
  old

  22 Nov 2006; Joseph Jezak <josejx@gentoo.org> gtklp-1.2.2.ebuild:
  Marked ppc stable for bug #148944.

  20 Nov 2006; <blubb@gentoo.org> gtklp-1.2.2.ebuild:
  stable on amd64

  19 Nov 2006; Andrej Kacian <ticho@gentoo.org> gtklp-1.2.2.ebuild:
  Stable on x86, bug #148944.

  18 Nov 2006; Stefan Schweizer <genstef@gentoo.org> -gtklp-1.0g-r1.ebuild,
  -gtklp-1.1.0.ebuild, -gtklp-1.2.1.ebuild:
  remove old

*gtklp-1.2.2 (05 Jun 2006)

  05 Jun 2006; Stefan Schweizer <genstef@gentoo.org> +gtklp-1.2.2.ebuild:
  Version bump thanks to Christian Schlotter <again@gmx.de> in bug 135262

*gtklp-1.2.1 (02 Apr 2006)

  02 Apr 2006; Stefan Schweizer <genstef@gentoo.org> +gtklp-1.2.1.ebuild:
  Version bump thanks to Christian Schlotter <again@gmx.de> in bug 123082

*gtklp-1.1.0 (04 Feb 2006)

  04 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> -gtklp-1.0d.ebuild,
  -gtklp-1.0f.ebuild, -gtklp-1.0g.ebuild, +gtklp-1.1.0.ebuild:
  1.1.0 version bump for bug 121592. Thanks to Christian Schlotter <again at
  gmx dot de>. Christian notes that the nls sed fix has been sent upstream.

*gtklp-1.0g-r1 (20 Sep 2005)

  20 Sep 2005; <dang@gentoo.org> +gtklp-1.0g-r1.ebuild:
  Rev version without depricated gtk2 USE flag.  Bug #106560

*gtklp-1.0g (02 Aug 2005)
