@@ -1,6 +1,9 @@
 DIST gtklp-1.2.2.src.tar.gz 1649804 RMD160 b4fd062c3684756dcbe24d1431717e0eaa140388 SHA1 2e01b78a6650a123e7871d6fc534aee026b9258e SHA256 30771c0e0990a24f8d3984f7a733c7280db9e88a86e560eb989a0b72618845db
 DIST gtklp-1.2.5.src.tar.gz 2010932 RMD160 f6b71e53a662b5885c743fa17a26105b7802bdb6 SHA1 1505d1b708ef598559779b6e31fbf41f9b03ad28 SHA256 77041eda614df21b631eb91e299e714927c1f06d0a28ba334a5d384ce1099eed
+DIST gtklp-1.2.7.src.tar.gz 739871 RMD160 24aae020912b03565a7fccb317b9dab72ade2d51 SHA1 fa7fc0901016bb035d0fdf56e0984bf9728af1d4 SHA256 6798abf8ed59ad874bd4703f3feb18a6f85c796e610da5fdbf576f3593b3c5a4
+DIST gtklp-logo.png.gz 47381 RMD160 ba772c41ace5ec2a587985fd7436e563e4edef99 SHA1 2bd5da4460b785c336118234e672a7c2f68e763f SHA256 58e086ec61646cc141d340dcf76d99a22fc970242e16303e52aae95c6100cae5
 EBUILD gtklp-1.2.2.ebuild 844 RMD160 5c264f86ee8d30d9df71e3f7c6875ee0164276f0 SHA1 1e7912d597bbc341a0a39ea86e90b29927330eb6 SHA256 815cdfcef8a7383971b41b490ccb1ac9d41136120c3d9b5fc74c1fc064c15062
 EBUILD gtklp-1.2.5.ebuild 893 RMD160 22ba1006607108dee093a535e436b2262b0f5be2 SHA1 c324e93719c2fdd37e1af2cb3abf20902832304a SHA256 28dc0f1c711d1254fadbce8e5f957eb5437d9d84d63e68cbfdad4b91ebbc8ece
-MISC ChangeLog 4435 RMD160 a6112e31a76dbef82f21dd509b7370607f128cac SHA1 2265f3c014f9b2f1e302cefc7685bcd72165e76b SHA256 8542baf874342906a8cd44161b5b911f623705585a66fa907a14132626d491bc
-MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
+EBUILD gtklp-1.2.7.ebuild 1264 RMD160 a58734d3e3e9d70e0d301f6ecc9456efd21b22f0 SHA1 2b75c5b8498a3d3906341bf3702b4e188beb392d SHA256 4c3252fe71629d2021d2ad1628fab39fabb97269f0a821ca92fab7b04549e4f5
+MISC ChangeLog 4603 RMD160 5f0276db955a246c2854e14e659c8955140163d8 SHA1 1536456a5b464609cd357481c932d11242a713b4 SHA256 f49748daa52cfb8f575f1ac9853e30c7e0478203bb2339082c5df2f297076598
+MISC metadata.xml 538 RMD160 5bfb17eaa8a226f45d20dddda5a1c8ae1bb1c9d6 SHA1 0d416d601bacafe49a5bb797c65f4f56c971dddb SHA256 c1ffa4dd06b6e031d1c2acfea0997a0b929f7807cd814bc49e5b14690698a419
