@@ -1,6 +1,12 @@
 # ChangeLog for net-print/gtklp
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/gtklp/ChangeLog,v 1.31 2008/01/17 16:28:50 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-print/gtklp/ChangeLog,v 1.32 2009/10/02 06:52:06 pva Exp $
+
+*gtklp-1.2.7 (02 Oct 2009)
+
+  02 Oct 2009; Peter Volkov <pva@gentoo.org> +gtklp-1.2.7.ebuild,
+  metadata.xml:
+  Version bump, bug #267067, thank Ivan Miljenovic for report.
 
   17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> gtklp-1.2.5.ebuild:
   Add missing pkg-config dependency. Thanks Patrick in bug #204804.
